--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ content="width=device-width, initial-scale=1.0"›
 <h3>Омавиат</h3>
 <p>Добро пожаловать на мой сайт, написанный на HTML. </P>
 </div>
-<img src = "C:\Users\flaptop\Desktop\cat.png" alt= "кот" width="400">
+<img src = "cat1.png" alt= "кот" width="400">
 </body> 
 </html>
+
 
