--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <header>
   <div class="logo" aria-hidden>
-      <img src="C:/Users/flaptop/Desktop/logo.png" alt="logo">
+     <img src="логотип.png">
   </div>
   <nav aria-label="Главная навигация">
     <a role="button" onclick="show('home')" id="nav-home">Главная</a>
@@ -443,3 +443,4 @@ highlightNav('home');
 </script>
 </body>
 </html>
+
