--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <header>
   <div class="logo" aria-hidden>
-     <img src="логотип.png">
+     <img src="logo.png">
   </div>
   <nav aria-label="Главная навигация">
     <a role="button" onclick="show('home')" id="nav-home">Главная</a>
@@ -443,4 +443,5 @@ highlightNav('home');
 </script>
 </body>
 </html>
+
 
