--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <header>
   <div class="logo" aria-hidden>
-     <img src=sait/logo.png>
+     <img src="sait/logo.png">
   </div>
   <nav aria-label="Главная навигация">
     <a role="button" onclick="show('home')" id="nav-home">Главная</a>
@@ -443,6 +443,7 @@ highlightNav('home');
 </script>
 </body>
 </html>
+
 
 
 
