--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="card" role="listitem">
           <div class="face" aria-hidden>
             <!-- pattern -->
-           <img src="C:\Users\flaptop\Desktop\2f4b2f2b8ddbb19501e848a8a85bf91b-no-bg-preview (carve.photos) (1).png" alt="Rhythm">
+           <img src="sait/chas1.png" alt="Rhythm">
           </div>
           <div class="name">Rhythm</div>
           <div class="price">1499,99 USD</div>
@@ -196,7 +196,7 @@
         <!-- Card 2 -->
         <div class="card" role="listitem">
           <div class="face" style="background:radial-gradient(circle,#0e0e0e,#1c1c1c)" aria-hidden>
-           <img src="C:\Users\flaptop\Desktop\146bdde5573b0daa10243c6d1a82fa3c-no-bg-preview (carve.photos) (1).png" alt="Rhythm">
+           <img src="sait/chas2.png" alt="Rhythm">
           </div>
           <div class="name">Kairos</div>
           <div class="price">1100,99 USD</div>
@@ -206,7 +206,7 @@
         <!-- Card 3 -->
         <div class="card" role="listitem">
           <div class="face" aria-hidden>
-            <img src="C:\Users\flaptop\Desktop\c9870af1f68ae810cb03dbeac6150df8-no-bg-preview (carve.photos).png" alt="Rhythm">
+            <img src="sait/chas3.png" alt="Rhythm">
           </div>
           <div class="name">Luxe</div>
           <div class="price">2599,99 USD</div>
@@ -216,7 +216,7 @@
         <!-- Card 4 -->
         <div class="card" role="listitem">
           <div class="face" aria-hidden>
-          <img src="C:\Users\flaptop\Desktop\5c6f567efb3fc4db65d363546d1b4216-no-bg-preview (carve.photos).png" alt="Rhythm">
+         <img src="sait/chas4.png" alt="Rhythm">
           </div>
           <div class="name">Aurum</div>
           <div class="price">1999,99 USD</div>
@@ -278,7 +278,7 @@
     <div class="wrap about">
       <div class="about-left center">
         <!-- stylized rabbit illustration (SVG) -->
-        <img src="C:\Users\flaptop\Desktop\a20ea4368ae7ebd89e3a36ab55dab4ad-no-bg-preview (carve.photos) (1).png"alt="Rhythm">
+        <img src="sait/zaic.png" alt="Rhythm">
           <defs>
             <linearGradient id="rb" x1="0" x2="1"><stop offset="0" stop-color="#e9e9f1"/><stop offset="1" stop-color="#c8d5e8"/></linearGradient>
           </defs>
@@ -443,6 +443,7 @@ highlightNav('home');
 </script>
 </body>
 </html>
+
 
 
 
